# worldmodels

ha_schmidhuber/: collect_dataset.ipynb  model.py  pyproject.toml  train-controller.ipynb  train-rnn.ipynb  train-vae.ipynb  train.ipynb  train_controller.py
ha_schmidhuber/conf/: config.yaml
