[project]
name = "ha-schmidhuber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cma>=4.4.4",
    "datafusion>=53.0.0",
    "gymnasium[box2d]>=1.3.0",
    "hydra-core>=1.3.3",
    "ipywidgets>=8.1.8",
    "lancedb>=0.33.0",
    "matplotlib>=3.11.0",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "trackio>=0.28.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
